Add poll name and description to gemini propmts when fetching suggestions. Minor style fixes. Improved poll share clipboard content.

--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -99,6 +99,8 @@
     (movieSelected)="addMoviePollItem($event)"
     [pollMovieNames]="pollMovieNames$ | async"
     [pollMovieIds]="pollMovieIds$ | async"
+    [pollName]="poll.name"
+    [pollDescription]="poll.description"
     [confirmSuggestion]="true"
   ></movie-search-input>
 
