--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -10,8 +10,7 @@
         <h1 class="title-text">Welcome home<br />movie lover! 🍿</h1>
         <p class="sub-text">
           Poll-a-Lot is your hub to movie polls and movie knowledge. Easily
-          create polls of movies, TV series or just about anything and share
-          them with you friends.
+          create polls to share with you friends.
         </p>
       </div>
     </div>
