--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -14,6 +14,7 @@ userService.isCurrentUser(poll?.owner) : false);
               <poll-link-copy
                 [name]="poll.name"
                 [pollId]="poll.id"
+                [pollDescription]="poll.description"
               ></poll-link-copy>
               <button
                 mat-icon-button
