Improve description positioning

--- a/src/app/latest-reviews/latest-review-item/latest-review-item.component.scss
+++ b/src/app/latest-reviews/latest-review-item/latest-review-item.component.scss
@@ -68,7 +68,7 @@
 
     .description {
       font-size: 0.6em;
-      margin: auto 0 5px 0;
+      margin: auto 0;
       color: #ccc;
 
       display: -webkit-box;
