--- a/src/styles.scss
+++ b/src/styles.scss
@@ -935,8 +935,8 @@ html {
 }
 
 .mat-bottom-sheet-container {
-  max-width: min(90%, 450px) !important; // same as dialog
-  min-width: min(90%, 450px) !important;
+  max-width: min(100vw, 650px) !important; // same as dialog
+  min-width: min(100vw, 650px) !important;
   border-radius: 20px 20px 0 0;
   margin: 0 auto;
 }
