Similar avatar style for movie review user avatar

--- a/src/app/poll/poll-description-dialog/poll-description-dialog.scss
+++ b/src/app/poll/poll-description-dialog/poll-description-dialog.scss
@@ -107,6 +107,8 @@ circle#popcrncirlce {
 
   .avatar {
     margin-right: 3px;
+    border: 1px solid #4e5a8d;
+    border-radius: 9999px;
   }
 
   .user {
