Adds loader to latest review component

--- a/src/app/latest-reviews/latest-review-item/latest-review-item.component.html
+++ b/src/app/latest-reviews/latest-review-item/latest-review-item.component.html
@@ -64,7 +64,8 @@
     <!-- <a [href]="logEntry.links[0].url"><mat-icon>open_in_new</mat-icon></a> -->
   </div>
 </div>
-} @if (latestView) {
+}
+@if (latestView) {
 <div class="view-item-container">
   <div class="user-frame">
     <div class="poster-container">
@@ -142,3 +143,4 @@
   }
 
 </ng-template>
+
