Fixes movie-dialog scrolling into positions on back-navigation

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -358,7 +358,7 @@
     <textarea rows="4" [(ngModel)]="editDescription"></textarea>
     } @if (data.editable) {
     <button
-      mat-raised-bud)tton
+      mat-raised-button
       class="description-button cursor-pointer"
       (click)="descriptionButtonClick(data.pollItem)"
     >
