Fixes add-poll date input icon position

--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -76,7 +76,7 @@
       [(ngModel)]="poll.description"
     ></textarea>
   </mat-form-field>
-  <div class="flex" style="align-items: center">
+  <div class="flex date-picker-input-container" style="align-items: center">
     <mat-form-field>
       <mat-label>📆 Poll Event date (optional)</mat-label>
       <input matInput [matDatepicker]="picker" [(ngModel)]="poll.date" />
