--- a/src/app/add-poll/add-poll.component.scss
+++ b/src/app/add-poll/add-poll.component.scss
@@ -82,3 +82,9 @@ mat-form-field.full-width {
     color: #d9c6ee;
   }
 }
+
+.date-picker-input-container ::ng-deep {
+  .mat-mdc-form-field-icon-suffix {
+    padding-left: 24px;
+  }
+}
