--- a/src/app/poster/poster.component.scss
+++ b/src/app/poster/poster.component.scss
@@ -88,3 +88,33 @@ watch-list-marker {
   top: -10px;
   z-index: 4;
 }
+
+.fullscreen-button {
+  position: absolute;
+  right: 0;
+  /* top: 20px; */
+  bottom: 4px;
+  z-index: 5;
+  padding: 7px;
+  text-shadow: 1px 1px 1px white;
+}
+
+.fullscreen-container {
+  width: 100vw;
+  background-color: black;
+}
+
+.fullscreen-poster {
+  height: 100vh;
+  max-width: 100vw;
+  display: flex;
+  margin: 0 auto;
+}
+
+.fullscreen-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1px;
+  color: white;
+}
