Fixes fullscreen image sizing.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -1123,7 +1123,12 @@ $anim-speed: 0.65; // in seconds
   }
 
   img {
-    width: 100vw;
+    height: auto;
+    width: auto;
+    margin: auto;
+    max-height: 100vh;
+    max-width: 100vw;
+    display: block;
   }
 
   .bd-selectors {
