--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -132,7 +132,7 @@ movie))) {
             class="has-description cursor-pointer"
             (click)="shortened = false"
             style="user-select: none"
-            >sticky_note_2</mat-icon
+            >mark_unread_chat_alt</mat-icon
           >
           }
           @if (pollItemOwner || pollOwner) {
