--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -725,11 +725,15 @@ textarea {
   line-height: 23px;
   word-break: break-word;
 
+  .pollitem-creator {
+    font-family: 'Product Sans Bold';
+    justify-self: right;
+    font-size: 0.8em;
+
+  }
+
   a.outside-link {
-    background: #b9b6ec;
     color: white;
-    padding: 2px 7px;
-    border-radius: 99999px;
   }
 
   & > span {
@@ -1135,4 +1139,63 @@ $anim-speed: 0.65; // in seconds
     top: unset;
     position: relative;
   }
+}
+
+.bubble {
+  --r: 1em;  /* the radius */
+  --t: 1.5em; /* the size of the tail */
+  
+  max-width: 300px;
+  padding: 1em;
+  border-inline: var(--t) solid #0000;
+  border-radius: calc(var(--r) + var(--t))/var(--r);
+  mask: 
+    radial-gradient(100% 100% at var(--_p) 0,#0000 99%,#000 102%) 
+      var(--_p) 100%/var(--t) var(--t) no-repeat,
+    linear-gradient(#000 0 0) padding-box;
+  background: linear-gradient(135deg, #d3b3e2, #959fe2) border-box;
+  color: #fff;
+  justify-self: center !important;
+
+  &.left {
+    --_p: 0;
+    border-bottom-left-radius: 0 0;
+    place-self: start;
+  }
+  &.right {
+    --_p: 100%;
+    border-bottom-right-radius: 0 0;
+    place-self: end;
+  }
+}
+
+.description {
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+.speech-bubble-icon {
+  background-color: #d9c6ee;
+  border-radius: 99999px;
+  min-width: 40px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+  top: -19px;
+  right: -17px;
+  z-index: 1;
+
+  mat-icon {
+    color: white;
+  }
+}
+
+.description .bubble {
+  position: relative;
+  left: -1em;
 }
