Improve star rating generation code. Add star rating to opened review details view. Retain movie poster size with review details view. Fix issue with changing movie backdrop in fullscreen mode.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -79,7 +79,7 @@
                 @for (b of movie.originalObject?.images.backdrops.slice(0, maxBgCount);
                 track b; let i = $index) {
                 <div
-                  (click)="selectedBackdrop$.next(i); backdropLoaded$.next(false);"
+                  (click)="$event.stopPropagation(); selectedBackdrop$.next(i); backdropLoaded$.next(false);"
                   class="bd-selector cursor-pointer"
                   [class.bd-selected]="i === current.val"
                 ></div>
