--- a/src/app/latest-reviews/latest-review-item/latest-review-item.component.html
+++ b/src/app/latest-reviews/latest-review-item/latest-review-item.component.html
@@ -128,19 +128,20 @@
 }
 
 <ng-template let-rating="rating" let-max="max" #ratingTemplate>
-  @if (rating) {
-    <div class="star-rating">
-        @for (star of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10].slice(0, rating); track star)
-        {
-        <mat-icon class="rating-star">star</mat-icon>
-        } @if (rating % 1 != 0) {
-        <mat-icon class="rating-star">star_half</mat-icon>
-        } @for (star of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10].slice(0, max - rating);
-        track star) {
-        <mat-icon class="empty-star">star_outline</mat-icon>
-        }
-      </div>
-  }
+  <div class="star-rating">
+    <!-- Full stars -->
+    @for (star of Array(Math.floor(rating)); track star) {
+      <mat-icon class="rating-star">star</mat-icon>
+    }
 
+    <!-- Half star -->
+    @if (rating % 1 !== 0) {
+      <mat-icon class="rating-star">star_half</mat-icon>
+    }
+
+    <!-- Empty stars -->
+    @for (star of Array(max - Math.ceil(rating)); track star) {
+      <mat-icon class="empty-star">star_outline</mat-icon>
+    }
+  </div>
 </ng-template>
-
